objects/ASI_KOR_RSD_Payment_Settlement_Header__c.object
<CustomObject>
    <description>For PRK Phase 2</description>
    <fields>
        <fullName>ASI_KOR_Approval_Comments__c</fullName>
        <label>Approval Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CA_Amount_Pending__c</fullName>
        <label>CA Amount (Pending)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CA_Amount_excl_Basic__c</fullName>
        <label>CA Amount (excl. Basic)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Comments__c</fullName>
        <label>Submission Comments (RSD)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Delegated_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_KOR_RSD_Payment_Settlement_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Final_Basic_Amount__c</fullName>
        <label>Final VI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Final_CA_Amount_excl_Basic__c</fullName>
        <label>Final CA Amount (excl. Basic)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Final_Total_Amount__c</fullName>
        <formula>ASI_KOR_Final_Basic_Amount__c + ASI_KOR_Final_CA_Amount_excl_Basic__c + ASI_KOR_Pre_Payment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Keyman_Allocation_Date__c</fullName>
        <label>Keyman Allocation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_NSD_Payment_Settlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NSD CA Payment Settlement</label>
        <referenceTo>ASI_KOR_NSD_Payment_Settlement_Header__c</referenceTo>
        <relationshipName>ASI_KOR_RSD_Payment_Settlement_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_No_of_Branches__c</fullName>
        <label>No. of Branches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_No_of_Sumitted_Branches__c</fullName>
        <label>No. of Sumitted Branches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Pre_Payment_Amount__c</fullName>
        <label>Pre-Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Region__c</fullName>
        <formula>Owner:User.ASI_KOR_User_Region_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_Cut_off_Date__c</fullName>
        <label>Cut-off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_Delegated_Approver_Email__c</fullName>
        <label>SYS Delegated Approver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_Manager_Email__c</fullName>
        <label>SYS Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_NSD_Delegator_Email__c</fullName>
        <label>SYS NSD Delegator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Send_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved by NSD</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_Branch_Budget__c</fullName>
        <label>Total Regional Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_VI_Pending__c</fullName>
        <label>Total VI (Pending)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment Settlement (RSD)</label>
    <listViews>
        <fullName>ASI_KOR_Waiting_for_Approval</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ASI_KOR_Total_VI_Pending__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Status__c</field>
            <operation>equals</operation>
            <value>Draft,Rejected</value>
        </filters>
        <label>Waiting for Approval</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>ASI_KOR_Total_VI_Pending__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201703_March</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ASI_KOR_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Final_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Delegated_Approver__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <label>201703 March</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201704_April</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ASI_KOR_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Final_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Delegated_Approver__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <label>201704 April</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201705_May</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ASI_KOR_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Final_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Delegated_Approver__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>5</value>
        </filters>
        <label>201705 May</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201706_June</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ASI_KOR_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Final_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Delegated_Approver__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>6</value>
        </filters>
        <label>201706 June</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201707_July</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Total_VI_Pending__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>ASI_KOR_Final_Total_Amount__c</columns>
        <columns>ASI_KOR_Total_Branch_Budget__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>8</value>
        </filters>
        <label>201708 Aug</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201709_Sep</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Total_VI_Pending__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>ASI_KOR_Final_Total_Amount__c</columns>
        <columns>ASI_KOR_Total_Branch_Budget__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>9</value>
        </filters>
        <label>201709 Sep</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201710_Oct</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Total_VI_Pending__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>ASI_KOR_Final_Total_Amount__c</columns>
        <columns>ASI_KOR_Total_Branch_Budget__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filters>
        <label>201710 Oct</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201711_Nov</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Total_VI_Pending__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>ASI_KOR_Final_Total_Amount__c</columns>
        <columns>ASI_KOR_Total_Branch_Budget__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>11</value>
        </filters>
        <label>201711 Nov</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201712_Dec</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Total_VI_Pending__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>ASI_KOR_Final_Total_Amount__c</columns>
        <columns>ASI_KOR_Total_Branch_Budget__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>12</value>
        </filters>
        <label>201712 Dec</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2017_February</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ASI_KOR_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Final_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Delegated_Approver__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>201702 February</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2017_January</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>ASI_KOR_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Final_CA_Amount_excl_Basic__c</columns>
        <columns>ASI_KOR_Delegated_Approver__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>201701 January</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201801_Jan</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Total_VI_Pending__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>ASI_KOR_Final_Total_Amount__c</columns>
        <columns>ASI_KOR_Total_Branch_Budget__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>201801 Jan</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X201802_Feb</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Region__c</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_Total_VI_Pending__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>ASI_KOR_Final_Total_Amount__c</columns>
        <columns>ASI_KOR_Total_Branch_Budget__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>ASI_KOR_Month__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>201802 Feb</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RPS-{00000000}</displayFormat>
        <label>RSD Payment Settlement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Settlements (RSD)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>